crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/refAbc.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:e10712b7db3b1cbd8fe5ad35b116387bb987dd5c14232665cf737142356407a4
size 674
